k8s-manifests/0.Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: secrets-to-vault
    # pod-security.kubernetes.io/enforce: restricted
  name: secrets-to-vault
spec:
  finalizers:
    - kubernetes
