k8s-manifests/6.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secrets-to-vault
  namespace: secrets-to-vault
  labels:
    app: secrets-to-vault
spec:
  ports:
    - name: app
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: secrets-to-vault
  type: ClusterIP
