k8s-manifests/7.ValidatingWebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "secrets-to-vault.secrets-to-vault.svc.cluster.local"
webhooks:
  - name: "secrets-to-vault.secrets-to-vault.svc.cluster.local"
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["secrets"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "secrets-to-vault"
        name: "secrets-to-vault"
        path: /sync
        port: 3000
      # url: https://
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURpRENDQW5DZ0F3SUJBZ0lVSjkrMW56UTVsMWM4SWxwRGF2WC9uUFlMZ3N3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1hERUxNQWtHQTFVRUJoTUNRVVV4RGpBTUJnTlZCQWdUQlVSMVltRnBNUTR3REFZRFZRUUhFd1ZFZFdKaAphVEVMTUFrR0ExVUVDaE1DUVVFeEN6QUpCZ05WQkFzVEFrRkJNUk13RVFZRFZRUURFd3ByZFdKbGNtNWxkR1Z6Ck1CNFhEVEl6TURNeE9EQTFNRFV3TUZvWERUSTRNRE14TmpBMU1EVXdNRm93WERFTE1Ba0dBMVVFQmhNQ1FVVXgKRGpBTUJnTlZCQWdUQlVSMVltRnBNUTR3REFZRFZRUUhFd1ZFZFdKaGFURUxNQWtHQTFVRUNoTUNRVUV4Q3pBSgpCZ05WQkFzVEFr [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    timeoutSeconds: 5
